# RubiksCube

./: .clang-format  .clang-tidy  CMakeLists.txt  conanfile.txt
.github/workflows/: ci.yml
assets/shaders/: shader.frag
cmake/: clang-format.cmake  clang-tidy.cmake
src/: CMakeLists.txt  main.cpp
